--- a/package.json
+++ b/package.json
@@ -11,62 +11,52 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "expo": "~51.0.0",
-    "expo-router": "~3.5.0",
-    "expo-status-bar": "~1.12.0",
-    "react": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-safe-area-context": "4.10.0",
-    "react-native-screens": "~3.31.0",
-    
-    "@react-navigation/native": "^6.1.9",
-    
-    "nativewind": "^4.0.1",
-    "tailwindcss": "^3.4.0",
-    
-    "react-native-reanimated": "~3.10.0",
-    "react-native-gesture-handler": "~2.16.0",
-    
-    "@tanstack/react-query": "^5.17.0",
-    
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.1.0",
-    "redux-persist": "^6.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    
-    "react-hook-form": "^7.49.3",
-    "zod": "^3.22.4",
+    "@daily-co/react-native-daily-js": "^0.82.0",
+    "@daily-co/react-native-webrtc": "111.0.0-daily.2",
     "@hookform/resolvers": "^3.3.4",
-    
-    "react-native-keyboard-controller": "^1.11.0",
-    
-    "@dailyco/react-native-daily-js": "^0.62.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "^11.3.0",
-    
-    "socket.io-client": "^4.6.1",
-    
+    "@react-navigation/native": "^6.1.9",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.17.0",
+    "date-fns": "^3.0.6",
+    "expo": "~51.0.0",
     "expo-av": "~14.0.0",
     "expo-haptics": "~13.0.0",
     "expo-linear-gradient": "~13.0.0",
-    
-    "react-native-action-sheet": "^2.4.2",
-    "@gorhom/bottom-sheet": "^4.6.0",
-    
+    "expo-router": "~3.5.0",
+    "expo-status-bar": "~1.12.0",
+    "immer": "^10.0.3",
+    "nativewind": "^4.0.1",
+    "react": "18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-native": "0.74.0",
+    "react-native-actions-sheet": "^0.9.8",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-gesture-handler": "~2.16.0",
+    "react-native-keyboard-controller": "^1.11.0",
+    "react-native-reanimated": "~3.10.0",
+    "react-native-safe-area-context": "4.10.0",
+    "react-native-screens": "~3.31.0",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.3.0",
-    
-    "zustand": "^4.4.7",
-    "immer": "^10.0.3",
-    "date-fns": "^3.0.6"
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
+    "tailwindcss": "^3.4.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@types/node": "^24.10.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
-    "typescript": "^5.3.3",
-    "eslint": "^8.56.0",
+    "axios": "^1.13.2",
+    "eslint": "^9.36.0",
     "eslint-config-expo": "^7.0.0",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
