--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-config-expo": "^9.2.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-native-worklets": "^0.6.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
