--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-gifted-chat": "^3.2.2",
     "react-native-keyboard-controller": "^1.11.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
